[feat][admin] add link for dress-colours

--- a/app/views/admin/dress_colours/index.html.slim
+++ b/app/views/admin/dress_colours/index.html.slim
@@ -1,3 +1,5 @@
+= render partial: 'spree/admin/shared/product_sub_menu'
+
 = stylesheet_link_tag 'application_redesign'
 
 h2 Colours Preview Tool
@@ -6,4 +8,7 @@ h2 Colours Preview Tool
     - dress_colours.each do |color|
         .color-option.product-option href="#" data-id=color.id  data-name=color.presentation
           .option-box.color-box style='margin: 10px; width:220px;height:50px;' class="color-#{color.name}"
-          .option-name  = color.presentation
+          .option-name
+            = color.presentation
+          code
+            = color.name
