--- a/app/assets/stylesheets/redesign/_modal.css.scss
+++ b/app/assets/stylesheets/redesign/_modal.css.scss
@@ -40,6 +40,47 @@
 // @end Bottom 
 // -----------------
 
+// Timer 
+.vex-dialog-timer .vex-content {
+  border: 0;
+  background-color: #f5e0f2;
+  text-align: center;
+  max-width: 760px;
+
+  h1 {
+    font-size: 34px;
+    text-transform: uppercase;
+    font-weight: 400;
+    padding-bottom: 0;
+  }
+  h2 {
+    font-size: 28px;
+    margin: 20px 0 30px;
+    text-transform: uppercase;
+    font-weight: 300;
+  }
+
+  .form {
+    margin: 30px -30px -30px -30px;
+    background-color: #f9ebf7;
+    padding: 30px 30px 0;
+    .form-control {
+      background: none;
+    }
+    .btn-submit {
+      border: 0;
+      background: none;
+    }
+    .or-rhombus {
+      width: 55px;
+      display: inline-block;
+      text-transform: uppercase;
+    }
+  }
+}
+// @end Timer
+// -----------------
+
 
 // - colors
 .vex-dialog-pink .vex-content {
