--- a/app/views/admin/dress_colours/index.html.slim
+++ b/app/views/admin/dress_colours/index.html.slim
@@ -2,12 +2,76 @@
 
 = stylesheet_link_tag 'application_redesign'
 
+
+
+
+style
+  | .highlight-missing-colours { background-image: repeating-linear-gradient(
+      90deg,
+      #ccc,
+      #ccc 14.25%,
+      #cc0 14.25%,
+      #cc0 28.50%,
+      #0cc 28.50%,
+      #0cc 42.75%,
+      #0c0 42.75%,
+      #0c0 57.0%,
+      #c0c 57.0%,
+      #c0c 71.25%,
+      #c00 71.25%,
+      #c00 85.5%,
+      #00c 85.5%,
+      #00c 100%
+    ),
+    repeating-linear-gradient(
+         90deg,
+         #00c,
+         #00c 14.25%,
+         #000 14.25%,
+         #000 28.50%,
+         #c0c 28.50%,
+         #c0c 42.75%,
+         #000 42.75%,
+         #000 57.0%,
+         #0cc 57.0%,
+         #0cc 71.25%,
+         #000 71.25%,
+         #000 85.5%,
+         #ccc 85.5%,
+         #ccc 100%
+       ),
+    repeating-linear-gradient(
+         90deg,
+         #00214C,
+         #00214C 16.5%,
+         #ffffff 16.5%,
+         #ffffff 32.50%,
+         #32006A 32.50%,
+         #32006A 48.75%,
+         #131313 48.75%,
+         #131313 65.0%,
+         #090909 65.0%,
+         #090909 71.25%,
+         #1D1D1D 71.25%,
+         #1D1D1D 80.5%,
+         #000000 80.5%,
+         #000000 100%
+       );
+
+    background-position: center top, center top, center top;
+    background-repeat: no-repeat;
+    background-size: 100% 70%, 100% 80%, auto auto;
+
+    }
+
+
 h2 Colours Preview Tool
 #product-color-content style='text-align:center;color:#000;'
   .recommended.grey style='display:flex; flex-wrap: wrap;'
     - dress_colours.each do |color|
         .color-option.product-option href="#" data-id=color.id  data-name=color.presentation
-          .option-box.color-box style='margin: 10px; width:220px;height:50px;' class="color-#{color.name}"
+          .highlight-missing-colours style='margin: 10px;'
+            .option-box style='width:220px;height:50px;' class="color-#{color.name}"
           .option-name
             = color.presentation
           code
