--- a/app/assets/stylesheets/redesign/_modal.css.scss
+++ b/app/assets/stylesheets/redesign/_modal.css.scss
@@ -21,12 +21,25 @@
     position: relative;
     padding: 30px;
     border: solid 1px #000;
+    .vex-footer {
+      margin: 30px -30px -30px -30px;
+      padding: 30px;
+      > *:only-child {margin: 0;}
+    }
   }
   .vex-close {
     @extend .icon-cross;
     position: absolute;
     top: 10px;
     right: 10px;
+  }
+
+  .or-rhombus {
+    width: 55px;
+    height: 55px;
+    text-transform: uppercase;
+    display: inline-block;
+    vertical-align: top;
   }
 }
 
@@ -35,56 +48,34 @@
   .vex-content {
     vertical-align: bottom;
     margin-bottom: 50px;
+    text-align: center;
+    max-width: 760px;
+    border: 0;
+    h1 {
+      font-size: 34px !important;
+      font-weight: 400;
+      padding-bottom: 0;
+      text-transform: none;
+      &.text-uppercase { text-transform: uppercase;}
+    }
+
+    h2 {
+      font-size: 28px;
+      margin: 20px 0 30px;
+      font-weight: 300;
+    }
   }
 }
 // @end Bottom 
-// -----------------
-
-// Timer 
-.vex-dialog-timer .vex-content {
-  border: 0;
-  background-color: #f5e0f2;
-  text-align: center;
-  max-width: 760px;
-
-  h1 {
-    font-size: 34px;
-    text-transform: uppercase;
-    font-weight: 400;
-    padding-bottom: 0;
-  }
-  h2 {
-    font-size: 28px;
-    margin: 20px 0 30px;
-    text-transform: uppercase;
-    font-weight: 300;
-  }
-
-  .form {
-    margin: 30px -30px -30px -30px;
-    background-color: #f9ebf7;
-    padding: 30px 30px 0;
-    .form-control {
-      background: none;
-    }
-    .btn-submit {
-      border: 0;
-      background: none;
-    }
-    .or-rhombus {
-      width: 55px;
-      display: inline-block;
-      text-transform: uppercase;
-    }
-  }
-}
-// @end Timer
 // -----------------
 
 
 // - colors
 .vex-dialog-pink .vex-content {
   background-color: $pink-bg;
+  .vex-footer {
+    background-color: #f9ebf7;
+  }
 }
 // @end Default layout
 // -----------------
