--- a/app/assets/stylesheets/redesign/extras/_helpers.css.scss
+++ b/app/assets/stylesheets/redesign/extras/_helpers.css.scss
@@ -14,6 +14,9 @@
 .font-forum {
  font-family: $font-brand-serif;
 } 
+.text-light {
+  font-weight: 300;
+}
 // @end Text helpers
 // -----------------
 
