--- a/app/views/layouts/redesign/_footer.html.slim
+++ b/app/views/layouts/redesign/_footer.html.slim
@@ -62,17 +62,15 @@
         li.footer-social--item
           = link_to configatron.links.twitter, target: :blank, class: 'twitter' do
             = image_tag '_icons/twitter.png'
-<<<<<<< HEAD
-=======
 
-#no_prom.hide
+/#no_prom.hide
   h1 Hey babe, looking for your dream birthday dress?
   h2.text-uppercase.font-forum Let our stylists help you find it.
   .vex-footer
     h4.text-light
       ' Sign up for a free styling session
       strong =' link_to 'here', '/birthday-styling'
-#birthday_popup.hide
+/#birthday_popup.hide
   h1.text-uppercase Hey birthday babe
   h2.text-uppercase Want 15% off your killer party dress?
   .vex-footer
@@ -87,7 +85,7 @@
             input.form-control.form-control-md.form-control-transparent type="text" placeholder="Enter your email address"
             span.input-group-addon
               input.btn-reset type="submit" value="Send"
-#popup_with_timer.hide
+/#popup_with_timer.hide
   h1.text-uppercase $25 OFF, JUST FOR YOU.
   h2.text-uppercase 48 HOURS ONLY
   .timer-box
@@ -112,7 +110,7 @@
             input.form-control.form-control-md.form-control-transparent type="text" placeholder="Enter your email address"
             span.input-group-addon
               input.btn-reset type="submit" value="Send"
-coffee:
+/coffee:
   $ ->
     vex.open({
       content: $('#popup_with_timer').html(),
